fix overflow problem in opera browser

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,8 +98,8 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    overflow-x:hidden;
+  html,body {
+    overflow:hidden;
   }
   .nav-links {
     position: absolute;
